error.log

pidfile.c:24:6: error: too few arguments to function call, expected 1, have 0
wait();
~~~~ ^
/usr/include/sys/wait.h:248:1: note: 'wait' declared here
pid_t   wait(int *) __DARWIN_ALIAS_C(wait);
^
1 error generated.